# sd-jwt-rust

./: .gitignore  Package.swift  build-release-linux.sh
.github/workflows/: pull-request.yml  release.yml
.scripts/: TemplatePackage.swift
demo-scala/: .gitignore  build.sbt
demo-scala/src/main/scala/: Main.scala
sd-jwt-kmp/: build.gradle.kts  settings.gradle.kts
sd-jwt-kmp/gradle/wrapper/: gradle-wrapper.properties
sd-jwt-kmp/src/androidMain/: AndroidManifest.xml 
sd-jwt-kmp/src/jvmTest/kotlin/sdjwtwrapper/: FlowCycle.kt
src/: disclosure.rs  lib.rs  verifier.rs
wrapper/: Cargo.toml  README.md  build-release-apple-universal.sh  build.rs
wrapper/output-frameworks/sd-jwt-swift/SDJWTSwift/Sources/C/include/: bridge.h
wrapper/output-frameworks/sd-jwt-swift/SDJWTSwift/Sources/Swift/: sdjwtwrapper.swift
wrapper/src/: lib.rs  sdjwtwrapper.udl  wrapper.rs
